[package]
name = "contract"
version = "0.1.0"
edition = "2021"

[dependencies]
casper-contract = "^4.0.0"
casper-types = "^4.0.1"
sha3 = { version = "^0.10.8", default-features = false }
hex = { version = "^0.4.3", default-features = false}
serde = { version = "1.0.80", default-features = false }
libsecp256k1 = { version = "0.7.1", std=false }
getrandom = { version = "0.2.15", features = ["js"] }

[[bin]]
name = "contract"
path = "src/main.rs"
bench = false
doctest = false
test = false

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"   # Optimize for size
panic = "abort"
overflow-checks = false
debug = false
#
[features]
default = ["std"]
std = ["casper-contract/std"]


